style.scss
/* ... */
.collection-thumbnail {
  position: relative;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.35);

  > .collection-thumbnail-body.panel-body {
    padding: 0;
    height: 100%;

    > img {
      width: 100%;
      height: 100%;
      object-position: center;
      object-fit: cover;
    }
  }

  &.panel {
    border: 0;
    border-radius: $border-radius;
    width: $collection-thumbnail-width;
    height: $collection-thumbnail-height;
  }

  .gradient {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    border-radius: $border-radius;
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 0.9) 93%);
  }

  /*
  &.has-menu {
    &:hover {
      .gradient {
      }
    }
  }
  */

  .thumbnail-img {
    width: 100%;
    height: 100%;
    border-radius: $border-radius;
  }

  .bottom {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 8em 1em 1em;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.95));

    flex-direction: column;

    .name {
      // @extend .h4;
      // width: 8em;
      font-size: 1.175em;
      margin: 0.5em 0;
      font-weight: bold;
    }

    .details {
      font-size: smaller;
      color: $text-color-disabled;
      display: flex;
      justify-content: space-between;

      > *:not(:first-child) {
        margin-left: 1em;
      }

      .icon {
        margin-right: 0.5em;
      }
    }
  }

  &:hover {
    .bottom {
      &.editable {
        .no-hover {
          display: none;
        }
      }
    }

    .thumbnail-hover-menu {
      .hover-content {
        opacity: 1.0;
      }
    }
  }

  &:not(:hover) {
    .bottom {
      .hover {
        display: none;
      }
    }
    .thumbnail-hover-menu {
      .hover-content {
        opacity: 0;
      }
    }
  }

  .thumbnail-hover-menu {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    pointer-events: none;

    .btn {
      pointer-events: all;
    }

    .hover-content {
      width: 100%;
      height: 100%;
    }

    .buttons .btn {
      border: 0px;
      display: flex;
      width: 100%;
      margin: 4px 0;
    }
  }

  .hover {
    .collection-name {
      .form-group {
        margin-bottom: 0;
      }
    }
  }

  /*
  .no-hover {
    margin-right: 1.5em;
  }
  */

  .hover {
    .collection-name {
      &.displaying {
        align-items: flex-end;
      }
    }
  }

  .revision-number {
    background-color: $brand-bg;
    padding: 2px 12px;
    border-radius: 20px;
    width: fit-content;
    text-transform: uppercase;
    font-size: smaller;
  }

  .author {
    // position: absolute;
    // top: 0.5em;
    // left: 0.5em;
    text-transform: uppercase;

    img {
      width: 16px;
      height: 16px;
      margin-right: 0.5em;
    }
  }

  .collection-status-container {
    position: absolute;
    top: 0.5em;
    right: 0.5em;

  }

  .collection-name {
    display: flex;
    justify-content: space-between;
    .form-control {
      font-family: $font-family-base;
      font-size: medium;
    }

    .btn {
      @extend .btn-embed;
      margin-left: 0.5em;
      font-size: medium;
    }
  }

  .hover-content {
    border-radius: $border-radius;
    display: flex;
    background-color: unset !important;

    > .btn-group-vertical {
      width: 128px;
      align-items: center;
      margin-left: auto;
      margin-right: auto;
      margin-top: 5em;
      // justify-content: center;
      .btn {
        justify-content: center;
        align-items: center;
        > .icon {
          margin-right: 0.5em;
        }
      }
    }
  }
}

.collection-status {
  color: $white;
  background-color: $gray-light;
  text-transform: uppercase;
  padding: 0 0.5em;
  &.enabled {
    background-color: $brand-success;
  }
}

.collection-list {
  display: flex;
  flex-wrap: wrap;

  > .placeholder {
    margin: auto;
  }

  .collection-thumbnail.panel {
    margin: $half-gutter;
    width: $collection-thumbnail-width;
    height: $collection-thumbnail-height;
  }

  .collection-thumbnail-body {
    .placeholder {
      .placeholder-icon {
        width: 52px;
        height: 52px;
      }

      .placeholder-text {
        font-size: 1.4em;
        text-align: center;
        margin-top: 1em;
      }
    }
  }
}

#collection-panel-group {
  .panel-heading {
    display: flex;
    align-items: center;

    >.panel-title {
      margin-left: 0.5em;
    }
  }

  > .panel {
    border: 0;

    > .panel-body {
      border-top-color: $gray-dark;
    }
  }
}

.collection-detail-cell {
  padding: 0 0.5em;

  img {
    width: 32px;
    height: 32px;
    margin-right: 0.5em;
  }

  .title {
    color: $text-color-disabled;
    white-space: nowrap;
  }
}

@media only screen and (max-width: 1250px) {
  .collection-description {
    width: 40em;
  }
}

@media only screen and (max-width: 1150px) {
  .collection-detail-cell {
    &.hideable {
      display: none;
    }
  }
  .collection-description {
    width: 30em;
  }
}

.collection-ghost-button {
  border: 1px solid $border-color;
  border-radius: 26px;
  padding: 0.5em 1em;
  background-color: transparent;
}
/* ... */

